# med_event_model_workspace_setup

./: .gitmodules  README.md  book.ipynb  pyproject.toml  setup.sh  update.sh
FIX/: pyproject.toml
