[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meds-etl"
version = "0.1.0"
description = "Local ETL tools"
dependencies = [
    "polars",
    "numpy",
    "regex",
]

[tool.setuptools]
py-modules = ["tokenizer", "text_tokenizer"]
packages = ["fastbpe", "mimic_utils"]